# mpd_info_screen2

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  Makefile  README.txt  index.html  style.css
.github/workflows/: man_to_html.yml  unittest.yml
bundled/: CMakeLists.txt
man/: mpd_info_screen2.1
src/: args.cc  args.h  constants.cc  constants.h  helpers.cc  helpers.h  host_prompt.cc  host_prompt.h  main.cc  mpd_client.cc  mpd_client.h  mpd_display.cc  mpd_display.h  print_helper.h  signal_handler.cc  signal_handler.h  test.cc  version.h
